<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/teal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white"/>

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/enable_sound"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginVertical="16dp" />

    <CheckBox
        android:id="@+id/notificationsCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:paddingVertical="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginVertical="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textSize="25dp"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/volumeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:id="@+id/applyButton"
        android:textSize="25dp"/>
</LinearLayout>
