<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:padding="24dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/choice_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_layout"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/purple"
            android:text="@string/play"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/scoreboardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/purple"
            android:text="@string/scoreboard"/>


        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/settings"
            android:layout_below="@id/choice_layout"
            android:textColor="@color/white"
            android:id="@+id/settings_btn"/>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/exit"
            android:layout_below="@id/choice_layout"
            android:textColor="@color/white"
            android:id="@+id/exit_btn"/>

    </LinearLayout>

    <TextView
        android:id="@+id/comment_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/comment_us"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal" />


</RelativeLayout>